# charlie-work-mcp

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yml  charlie.toml  pyproject.toml  server.json  smithery.yaml
.github/workflows/: charlie.yml  ci.yml  release.yml
evals/: agentic.py  run.py
evals/fixtures/sample_repo/: notes.py  package.json
evals/fixtures/sample_repo/scripts/: deploy.sh
evals/fixtures/sample_repo/src/: auth.py  billing.py  models.py  repository.py  service.py  utils.py  views.py
evals/fixtures/sample_repo/tests/: checkout.spec.js  test_login.py
src/charlie_work_mcp/: __main__.py  actions.py  baseline.py  cli.py  config.py  constants.py  diff.py  fixers.py  fs.py  gitmeta.py  history.py  hotspots.py  install.py  models.py  owners.py  patch.py  persona.py  rules.py  sarif.py  scan.py  scoring.py  server.py  suppress.py
src/charlie_work_mcp/scanners/: __init__.py  certs.py  code.py  dead_flags.py  debug.py  dep_health.py  deps.py  py_ast.py  runbooks.py  secrets.py  tests.py  todos.py  treesitter_scan.py
src/charlie_work_mcp/services/: github.py  lockfiles.py  osv.py  registries.py  store.py
tests/: test_agents_md.py  test_cli_and_tools.py  test_fixers.py  test_flow.py  test_gating.py  test_insights.py  test_install.py  test_polish.py  test_scanners.py  test_server_stdio.py
