[project]
name = "charlie-work-mcp"
version = "0.1.0"
description = "An MCP server that surfaces (and dignifies) the toil in your repo — the un-fun, load-bearing maintenance work nobody else will do. This is Charlie Work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hatim Razani" }]
keywords = ["mcp", "model-context-protocol", "tech-debt", "toil", "code-quality", "maintenance", "its-always-sunny"]
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "packaging>=24.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.7.0",
]

[project.scripts]
charlie-work-mcp = "charlie_work_mcp.__main__:main"
charlie-work = "charlie_work_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charlie_work_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
