[project]
name = "charlie-work-mcp"
version = "0.3.0"
description = "An MCP server that surfaces (and dignifies) the toil in your repo — the un-fun, load-bearing maintenance work nobody else will do. This is Charlie Work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hatim Razani" }]
keywords = ["mcp", "model-context-protocol", "tech-debt", "toil", "code-quality", "maintenance", "its-always-sunny"]
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "packaging>=24.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.7.0",
]

[project.scripts]
charlie-work-mcp = "charlie_work_mcp.__main__:main"
charlie-work = "charlie_work_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charlie_work_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 115
target-version = "py311"
src = ["src"]
extend-exclude = ["evals/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "SIM105", "SIM115", "UP042"]

[tool.mypy]
python_version = "3.11"
packages = ["charlie_work_mcp"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tree_sitter.*", "tree_sitter_language_pack.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["charlie_work_mcp.scanners.treesitter_scan"]
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.coverage.run]
source = ["charlie_work_mcp"]
branch = false

[tool.coverage.report]
show_missing = false
fail_under = 60
